2003-08-13  John Levon  <levon@movementarian.org>

	* libpp/profile_container.cpp:
	* libpp/profile_container.h: remove "base_vma" parameter
	to add_samples(), we can just re-grab it straight from
	the abfd

2003-08-13  John Levon  <levon@movementarian.org>

	* libpp/profile_container.cpp:
	* libpp/profile_container.h: remove unused "zero samples"
	optimization hint: it's always false

	* pp/opannotate.cpp:
	* pp/opgprof.cpp:
	* pp/opreport.cpp: from above

2003-08-12  John Levon  <levon@movementarian.org>

	* pp/opreport.cpp: small trivialities

2003-08-12  Philippe Elie  <phil.el@wanadoo.fr>

	* libregex/stl.pat.in: minor fix/improvments
	* libregex/mangled-name.txt: add tests

2003-08-12  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opreport.cpp: fix thinko when --merge=lib

2003-08-12  John Levon  <levon@movementarian.org>

	* pp/opreport.cpp: s/count_groups_summary/summary_container/g

2003-08-12  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: document opreport's side-by-side a little
	bit

2003-08-12  John Levon  <levon@movementarian.org>

	* pp/opreport.cpp: s/group_summary/app_summary/, and
	a lot of other renamings to clarify the count groups
	usage.

2003-08-12  John Levon  <levon@movementarian.org>

	* utils/op_help.c: add --unit-mask

	* utils/opcontrol: use --unit-mask

2003-08-12  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opreport.cpp: re write using count_array_t

2003-08-11  John Levon  <levon@movementarian.org>

	* libpp/count_array.cpp:
	* libpp/count_array.h: auto-resize the number of groups
	based on how we index.

	* libpp/profile_container.cpp: remove check

	* pp/opannotate.cpp: count_array.zero() not .empty()

2003-08-11  John Levon  <levon@movementarian.org>

	* libpp/filename_spec.h:
	* libpp/profile_spec.cpp:
	* libpp/profile_spec.h: add comments, allow comma lists
	for event, count, and unit mask

	* libutil++/comma_list.h: implement missing method

2003-08-11  John Levon  <levon@movementarian.org>
